<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="24dp"
    tools:context=".MoveForResultActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textSize="36sp"
        android:lineSpacingMultiplier="1"
        android:fontFamily="sans-serif"
        android:textColor="#FBFFFC"
        android:text="@string/for_result_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="14sp"
        android:fontFamily="sans-serif"
        android:textColor="#FBFFFC"
        android:text="@string/for_result_description"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:textSize="24sp"
        android:fontFamily="sans-serif"
        android:textColor="#FBFFFC"
        android:textFontWeight="500"
        android:text="@string/choose_number" />

    <RadioGroup
        android:id="@+id/rg_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/rb_50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:paddingLeft="12dp"
            android:textSize="18sp"
            android:textColor="#FBFFFC"
            android:buttonTint="#2A4DE8"
            android:text="@string/_50" />
        <RadioButton
            android:id="@+id/rb_100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:paddingLeft="12dp"
            android:textSize="18sp"
            android:textColor="#FBFFFC"
            android:buttonTint="#2A4DE8"
            android:text="@string/_100" />
        <RadioButton
            android:id="@+id/rb_150"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:paddingLeft="12dp"
            android:textSize="18sp"
            android:textColor="#FBFFFC"
            android:buttonTint="#2A4DE8"
            android:text="@string/_150" />
        <RadioButton
            android:id="@+id/rb_200"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:paddingLeft="12dp"
            android:textSize="18sp"
            android:textColor="#FBFFFC"
            android:buttonTint="#2A4DE8"
            android:text="@string/_200" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_choose"
        android:layout_marginVertical="50dp"
        style="@style/primaryBtn"
        android:text="@string/choose" />

</LinearLayout>