<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="24dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/title"
            android:textSize="64sp"
            android:lineSpacingMultiplier="0.8"
            android:fontFamily="sans-serif"
            android:textColor="#FBFFFC"
            android:textFontWeight="500" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/title_description"
            android:textSize="14sp"
            android:fontFamily="sans-serif"
            android:textColor="#FBFFFC"
            android:lineSpacingMultiplier="1.2" />

        <Button
            android:id="@+id/btn_move_activity"
            style="@style/primaryBtn"
            android:layout_marginVertical="5dp"
            android:text="@string/move_activity"/>

        <Button
            android:id="@+id/btn_move_with_data"
            style="@style/primaryBtn"
            android:layout_marginVertical="5dp"
            android:text="@string/move_with_data" />

        <Button
            android:id="@+id/btn_move_activity_object"
            style="@style/primaryBtn"
            android:layout_marginVertical="5dp"
            android:text="@string/move_with_object" />

        <Button
            android:id="@+id/btn_dial_number"
            style="@style/primaryBtn"
            android:layout_marginVertical="5dp"
            android:text="@string/dial_number" />



        <androidx.cardview.widget.CardView
            android:id="@+id/myCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#252934"
            app:cardCornerRadius="28dp"
            android:layout_marginTop="5dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp">

                <TextView
                    android:id="@+id/tv_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/result_from_activity"
                    android:textSize="24sp"
                    android:textColor="#FBFFFC"
                    android:layout_marginTop="5dp"
                    android:textFontWeight="500"
                    android:fontFamily="sans-serif" />

                <Button
                    android:id="@+id/btn_move_for_result"
                    android:layout_width="match_parent"
                    android:layout_marginTop="15dp"
                    android:layout_height="50dp"
                    android:textSize="14sp"
                    android:backgroundTint="#2A4DE8"
                    android:text="@string/move_with_result" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>



</ScrollView>